<resources>
  <string name="app_name">Revent</string>

  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
  <string name="details">Details</string>
  <string name="comments">Comments</string>

  <string name="going_to">Going to</string>
  <string name="wants_to">Wants to</string>
  <string name="title_activity_favorites">Favorites</string>
  <string name="create_event">New Event</string>


  <!-- Id's & auth -->
  <string name="facebook_app_id">855330497892855</string>

  <!-- Content Provider / SyncAdapter -->
  <string name="sync_account_type">choresapp.gabilheri.com</string>
  <string name="content_authority">com.gabilheri.choresapp.app</string>
  <string name="whos_going">Who\'s Going?</string>
  <string name="friends">Friends</string>
  <string name="about">About</string>
  <string name="search">Search</string>
  <string name="favorites">Favorites</string>
  <string name="feed">Feed</string>
  <string name="settings">Settings</string>
  <string name="sign_out">Sign Out</string>
  <string name="new_event">Enter Event Name</string>
  <string name="time">Time</string>
  <string name="date">Date</string>
  <string name="location">Location</string>
  <string name="select_category">Select Category</string>
  <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="title_activity_add_friend">AddFriendActivity</string>
  <string name="add_friend">Add a Friend</string>
  <string name="enter_email_friend">Enter email of friend</string>
  <string name="done">Done</string>
  <string name="who">Who:</string>
  <string name="where">Where:</string>
  <string name="address">Address:</string>
  <string name="title">Title:</string>
  <string name="info">Info</string>
  <string name="comment">Comment</string>


  <!-- Generated from code section -->

</resources>
