<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_marginLeft="@dimen/card_margin"
  android:layout_marginRight="@dimen/card_margin"
  android:layout_marginBottom="8dp"
  android:layout_marginTop="8dp"
  >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange_400"
            android:drawableLeft="@drawable/ic_info"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/info"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white_light_grey"
            android:textStyle="bold"/>

        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/who"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/grey_800"
                    />

                <TextView
                    android:id="@+id/whoName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:singleLine="true"
                    tools:text="John Doe"
                    android:textSize="16sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/where"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/grey_800"
                    />

                <TextView
                    android:id="@+id/whereLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:singleLine="true"
                    tools:text="Chipotle"
                    android:textColor="@color/grey_800"
                    android:textSize="16sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/address"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/grey_800"
                    />

                <TextView
                    android:id="@+id/whereAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:paddingBottom="4dp"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    tools:text="501 West 7th Street, Austin TX. This text is here so we can simulate a long address"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/grey_800"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>